--- a/boston_data_vs.ipynb
+++ b/boston_data_vs.ipynb
@@ -29,10 +29,10 @@
       "metadata": {
         "id": "qIASfrXH7m-h",
         "colab_type": "code",
-        "outputId": "f9607cdb-ed21-4518-ea11-f143bd5d58c6",
+        "outputId": "d88e1a53-8a07-446e-b0e9-109a24627c84",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 297
+          "height": 317
         }
       },
       "source": [
@@ -41,7 +41,7 @@
         "boston.head()\n",
         "boston.describe()"
       ],
-      "execution_count": 39,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -239,7 +239,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 1
         }
       ]
     },
@@ -257,7 +257,7 @@
       "source": [
         "boston.info()"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,7 +291,7 @@
       "metadata": {
         "id": "AAHTE-80RbSY",
         "colab_type": "code",
-        "outputId": "abeed211-1d95-44a7-e749-bd53b1c15fe2",
+        "outputId": "d2f2c6c9-c420-4ed3-9c32-6fe0a7dc2757",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 436
@@ -305,7 +305,7 @@
         "sns.distplot(boston[\"medv\"]);\n",
         "#sns.catplot(x=\"rm\",y=\"medv\",kind=\"violin\",data=boston);"
       ],
-      "execution_count": 41,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,7 +352,7 @@
         "#boston.groupby([\"chas\"]).agg({'chas':'count'})\n",
         "boston.groupby('chas').count()['medv']"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +385,7 @@
       "source": [
         "boston[boston.medv==50]"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,7 +748,7 @@
         "#sns.catplot(x=\"rm\", y=\"medv\", hue=\"chas\",\n",
         "#            kind=\"violin\", split=True, data=boston);"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -781,11 +781,11 @@
       "metadata": {
         "id": "nYsowMcr2DA9",
         "colab_type": "code",
+        "outputId": "0f3aae64-7521-457b-eb3f-a043eb993a20",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "0f3aae64-7521-457b-eb3f-a043eb993a20"
+        }
       },
       "source": [
         "sns.jointplot(x=\"crim\", y=\"medv\", data=boston);\n",
@@ -796,7 +796,7 @@
         "#plt.scatter(boston.medv,boston.rm);\n",
         "#plt.show()"
       ],
-      "execution_count": 104,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -865,11 +865,11 @@
       "metadata": {
         "id": "VsjG_ZD-3a08",
         "colab_type": "code",
+        "outputId": "e1ea493d-d876-4946-ddc0-bb552b2db8be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "e8c8fb6e-b484-4484-d6ba-754b300a40d9"
+        }
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
@@ -903,7 +903,7 @@
         "#rf = RandomForestClassifier();\n",
         "#rf.fit(x_train, y_train)\n"
       ],
-      "execution_count": 103,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,6 +916,55 @@
             "[31.63108404]\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ULGODhRAM02Y",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 232
+        },
+        "outputId": "3fb39aa0-7672-45e4-aba2-95728ce9433e"
+      },
+      "source": [
+        "from itertools import combinations\n",
+        "\n",
+        "\n",
+        "\n",
+        "features=boston_x.columns\n",
+        "features.shape[0]\n",
+        "boston_y =boston['medv'];\n",
+        "boston_x=boston.drop(columns=['medv'],axis=1);\n",
+        "x_train, x_test, y_train, y_test = train_test_split(boston_x, boston_y, test_size=0.30, random_state=42);\n",
+        "\n",
+        "for x in range(2,features.shape[0]):\n",
+        "  for c in combinations(features,x):\n",
+        "    cols = [col for col in boston_x.columns if col  in c]\n",
+        "    xx_train = x_train[cols]\n",
+        "    xx_test =  x_test[cols]\n",
+        "    \n",
+        "    reg=LinearRegression();\n",
+        "    reg.fit(xx_train,boston_y);\n",
+        "    print(reg.score(xx_test,y_test));\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-78-1ac3c2adf401>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mboston_y\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mboston\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'medv'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mboston_x\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mboston\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'medv'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mboxton_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mboston_y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.30\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'boxton_x' is not defined"
+          ]
         }
       ]
     },
