--- a/boston_data_vs.ipynb
+++ b/boston_data_vs.ipynb
@@ -924,11 +924,7 @@
       "metadata": {
         "id": "ULGODhRAM02Y",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 232
-        },
-        "outputId": "3fb39aa0-7672-45e4-aba2-95728ce9433e"
+        "colab": {}
       },
       "source": [
         "from itertools import combinations\n",
@@ -940,33 +936,32 @@
         "boston_y =boston['medv'];\n",
         "boston_x=boston.drop(columns=['medv'],axis=1);\n",
         "x_train, x_test, y_train, y_test = train_test_split(boston_x, boston_y, test_size=0.30, random_state=42);\n",
+        "#print (x_train.shape)\n",
+        "#print (y_train.shape)\n",
+        "#print (x_test.shape)\n",
+        "#print (y_test.shape)\n",
+        "\n",
+        "max_score=0\n",
+        "par=[]\n",
         "\n",
         "for x in range(2,features.shape[0]):\n",
         "  for c in combinations(features,x):\n",
         "    cols = [col for col in boston_x.columns if col  in c]\n",
         "    xx_train = x_train[cols]\n",
         "    xx_test =  x_test[cols]\n",
-        "    \n",
         "    reg=LinearRegression();\n",
-        "    reg.fit(xx_train,boston_y);\n",
-        "    print(reg.score(xx_test,y_test));\n",
+        "    reg.fit(xx_train,y_train);\n",
+        "    r=reg.score(xx_test,y_test);\n",
+        "    if r>max_score:\n",
+        "      max_score=r;\n",
+        "      par=c;\n",
+        "    \n",
         "\n",
-        "\n"
+        "print (max_score) \n",
+        "print (r)\n"
       ],
-      "execution_count": 78,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-78-1ac3c2adf401>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mboston_y\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mboston\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'medv'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mboston_x\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mboston\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'medv'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mboxton_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mboston_y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.30\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'boxton_x' is not defined"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
